--- a/gh-pages-stub/_includes/sidebar.html
+++ b/gh-pages-stub/_includes/sidebar.html
@@ -38,6 +38,10 @@
   <li><a href="#" class="text-center"><i class="glyphicon glyphicon-paperclip"></i></a></li>
     <li><a href="#" class="text-center"><i class="glyphicon glyphicon-refresh"></i></a></li>          -->
 </ul>
-<div id="search"><input type="text" size="40" placeholder="Search"></div>            
+<div id="search"> 
+  <form role="search" action="{{ site.baseurl }}/search/" method="get">
+   <input type="text" size="40" placeholder="Search" name="query">
+   <input type="hidden" name="version" value="{{ version }}">
+  </form>
+</div>            
 </div>
-  
