KAA-1239 Documentation search with version optimization

--- a/gh-pages-stub/_includes/sidebar.html
+++ b/gh-pages-stub/_includes/sidebar.html
@@ -42,6 +42,7 @@
   <form role="search" action="{{ site.baseurl }}/search/" method="get">
    <input type="text" size="40" placeholder="Search" name="query">
    <input type="hidden" name="version" value="{{ version }}">
+   <input type="hidden" name="baseUrl" value="{{ site.baseurl }}/{{ base_docs_path }}">
   </form>
 </div>            
 </div>
